# mcmc-maze-solver

./: Cargo.toml
crates/web/: Cargo.toml  index.html
crates/web/src/: lib.rs
src/: lib.rs  maze.rs  path.rs
