[package]
name = "mcmc-maze-solver"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
partial-min-max = "0.4.0"
rand = "0.7"

[workspace]
members = [
    "crates/web",
]
