[package]
name = "mcmc-maze-solver-web"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
futures = "0.3"
js-sys = "0.3.35"
log = "0.4.8"
mcmc-maze-solver = { path = "../.." }
rand = { version = "0.7", features = ["small_rng"] }
wasm-bindgen = "0.2.58"
wasm-bindgen-futures = "0.4.8"

[dependencies.web-sys]
version = "0.3.35"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Node",
    "Performance",
    "Window",
]
